vision subtitle prevent overlap

--- a/css/us.css
+++ b/css/us.css
@@ -37,6 +37,7 @@
     font-size: 1.8rem;
     width: 80%;
     color: var(--green-aso);
+    padding-bottom: 10%;
 }
 
 .mission-vision .content .mission .title,
